--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit==0.68.1
-pandas==0.25.3
-base58==2.0.0
-matplotlib==3.1.3
-numpy==1.18.1
+streamlit==0.49.0
+altair==3.2.0
+sklearn
+pandas
+numpy
+plotly
+matplotlib
+seaborn
+IPython
+tqdm
+alpha_vantage
+xgboost
 yfinance
-lxml==4.5.1
-fbprophet==0.7.1
-autots 
+lxml
